[package]
name = "scratch-native"
version = "0.1.0"
authors = ["adumbidiot <nathaniel.daniel23@outlook.com>"]
edition = "2018"

[dependencies]
scratch_crate = { path = "lib/scratch", package = "scratch" }

toml="0.4"

curl = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
fs_extra = "1"
clap = "2"
indicatif = "0.10"

nsvg = "0"
image = "0"

hound="3"
